# docs/swagger.yaml
@@ -206,6 +206,10 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/dto.GreetingResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/dto.ProblemDetail'
         "500":
           description: Internal Server Error
           schema:
@@ -235,6 +239,10 @@ paths:
             $ref: '#/definitions/dto.GreetingResponse'
         "400":
           description: Bad Request
+          schema:
+            $ref: '#/definitions/dto.ProblemDetail'
+        "401":
+          description: Unauthorized
           schema:
             $ref: '#/definitions/dto.ProblemDetail'
         "409":
@@ -270,6 +278,10 @@ paths:
           description: Bad Request
           schema:
             $ref: '#/definitions/dto.ProblemDetail'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/dto.ProblemDetail'
         "404":
           description: Not Found
           schema:
@@ -302,6 +314,10 @@ paths:
             $ref: '#/definitions/dto.GreetingResponse'
         "400":
           description: Bad Request
+          schema:
+            $ref: '#/definitions/dto.ProblemDetail'
+        "401":
+          description: Unauthorized
           schema:
             $ref: '#/definitions/dto.ProblemDetail'
         "404":
@@ -344,6 +360,10 @@ paths:
           description: Bad Request
           schema:
             $ref: '#/definitions/dto.ProblemDetail'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/dto.ProblemDetail'
         "404":
           description: Not Found
           schema:
@@ -371,6 +391,10 @@ paths:
             items:
               $ref: '#/definitions/dto.GreetingResponse'
             type: array
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/dto.ProblemDetail'
         "500":
           description: Internal Server Error
           schema:
