# internal/controller/hello_controller.go
@@ -45,6 +45,7 @@ func NewHelloController(service service.HelloService,
 // @Produce json
 // @Security BearerAuth
 // @Success 200 {object} dto.GreetingResponse
+// @Failure 401 {object} dto.ProblemDetail
 // @Failure 500 {object} dto.ProblemDetail
 // @Router /api/hello [get]
 func (h *helloControllerImpl) Hello(c *gin.Context) {
@@ -62,6 +63,7 @@ func (h *helloControllerImpl) Hello(c *gin.Context) {
 // @Param input body dto.GreetingInput true "Greeting Input"
 // @Success 201 {object} dto.GreetingResponse
 // @Failure 400 {object} dto.ProblemDetail
+// @Failure 401 {object} dto.ProblemDetail
 // @Failure 409 {object} dto.ProblemDetail
 // @Failure 500 {object} dto.ProblemDetail
 // @Router /api/hello [post]
@@ -97,6 +99,7 @@ func (h *helloControllerImpl) CreateGreeting(c *gin.Context) {
 // @Produce json
 // @Security BearerAuth
 // @Success 200 {array} dto.GreetingResponse
+// @Failure 401 {object} dto.ProblemDetail
 // @Failure 500 {object} dto.ProblemDetail
 // @Router /api/hello/all [get]
 func (h *helloControllerImpl) GetAllGreetings(c *gin.Context) {
@@ -119,6 +122,7 @@ func (h *helloControllerImpl) GetAllGreetings(c *gin.Context) {
 // @Param id path int true "Greeting ID"
 // @Success 200 {object} dto.GreetingResponse
 // @Failure 400 {object} dto.ProblemDetail
+// @Failure 401 {object} dto.ProblemDetail
 // @Failure 404 {object} dto.ProblemDetail
 // @Failure 500 {object} dto.ProblemDetail
 // @Router /api/hello/{id} [get]
@@ -161,6 +165,7 @@ func (h *helloControllerImpl) GetGreetingByID(c *gin.Context) {
 // @Param input body dto.GreetingInput true "Greeting Input"
 // @Success 200 {object} dto.GreetingResponse
 // @Failure 400 {object} dto.ProblemDetail
+// @Failure 401 {object} dto.ProblemDetail
 // @Failure 404 {object} dto.ProblemDetail
 // @Failure 500 {object} dto.ProblemDetail
 // @Router /api/hello/{id} [put]
@@ -216,6 +221,7 @@ func (h *helloControllerImpl) UpdateGreeting(c *gin.Context) {
 // @Param id path int true "Greeting ID"
 // @Success 204 "No Content"
 // @Failure 400 {object} dto.ProblemDetail
+// @Failure 401 {object} dto.ProblemDetail
 // @Failure 404 {object} dto.ProblemDetail
 // @Failure 500 {object} dto.ProblemDetail
 // @Router /api/hello/{id} [delete]
